customize title for show page

--- a/app/views/errors/show.html.erb
+++ b/app/views/errors/show.html.erb
@@ -1,3 +1,5 @@
+<%= content_for :meta_title, "#{@error.title} - Resolver" %>
+
 <div class="w-full">
   <div class="flex justify-between items-center">
     <%= link_to "Back", root_path, class: "text-xl text-gray-custom hover:text-gray-500 dark:text-gray-light underline dark:hover:text-gray-200 transition-all duration-200" %>
